[package]
name = "example"
version = "0.1.0"
authors = ["Gao Hongtao <hanahmily@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "helloworld-gateway"
path = "src/helloworld/gateway.rs"

[dependencies]
tonic = { version = "0.1.1", features = ["default"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"

[build-dependencies]
grpc-gateway-build = { path = "../grpc-gateway-build" }
