[package]
name = "grpc-gateway-build"
version = "0.1.0"
authors = ["Gao Hongtao <hanahmily@gmail.com>"]
edition = "2018"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"